词法语法分析重构。